--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">;
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
 <meta http-equiv="content-type" content="text/html; charset=windows-1252">
@@ -11,12 +11,12 @@
 <hr>
 <p>
 
-<img src="./files/photo.jpg" alt="Picture of Quan Yuan" align="Right" border="0" width="250">
+<img src="tonyyuango.github.io/files/photo.jpg" alt="Picture of Quan Yuan" align="Right" border="0" width="250">
 
 </p><h1>
     Dr. Quan YUAN
 
-<img src="./files/name.jpg" alt="Chinese Name" align="Left" border="0" width="70">
+<img src="tonyyuango.github.io/files/name.jpg" alt="Chinese Name" align="Left" border="0" width="70">
 </h1>
 <p>
 </p><table>
@@ -58,8 +58,8 @@ Urbana, IL, USA 61801-->
     <a href="#publications">Publications</a>
     <a href="#professional">Professional Activities</a>
     <a href="#awards">Awards</a>
-    <a href="./files/CV_yuan_en.pdf">  Curriculum Vitae</a>
-    <a href="./datacode.html">Data & Code</a>
+    <a href="tonyyuango.github.io/files/CV_yuan_en.pdf">  Curriculum Vitae</a>
+    <a href="tonyyuango.github.io/datacode.html">Data & Code</a>
 </h3>
 
 
