--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ Kaiqi Zhao, <strong><em>Quan Yuan</em></strong>, and Gao Cong.
 <span style="font-style: italic;"> Proceedings of the 10st ACM International Conference on Web Search and Data Mining(<strong>WSDM '17</strong>), to be published, Cambridge, UK, February 6-10, 2017.<br>
 
 <li class="b">
-<span style="font-weight: bold;">GeoBurst+: E¿ective and Real-Time Local Event Detection in Geo-Tagged Tweet Streams</span>.
+<span style="font-weight: bold;">GeoBurst+: Effective and Real-Time Local Event Detection in Geo-Tagged Tweet Streams</span>.
 <br>
 Chao Zhang, Dongming Lei, <strong><em>Quan Yuan</em></strong>, Honglei Zhuang, Lance M. Kaplan, Shaowen Wang, and Jiawei Han.
 <br>
