--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ Urbana, IL, USA 61801-->
 	<a href="#professional">Professional Activities</a>
 	<a href="#awards">Awards</a>
 	<a href="tonyyuango.github.io/files/CV_yuan_en.pdf">  Curriculum Vitae</a>
-	<a href="tonyyuango.github.io/datacode.html">Data & Code</a>
+	<a href="datacode.html">Data & Code</a>
 </h3>
 
 
