add event profiling paper, code and data

--- a/files/datacode.html
+++ b/files/datacode.html
@@ -29,6 +29,13 @@
 <br>
 <span style="font-style: italic;"> Proceedings of the 26th ACM International Conference on Information and Knowledge Management (<strong>CIKM '17</strong>), pages 617-626, Singapore, November 06-10, 2017.<br>
 </span></li>
+<li class="b">
+<span style="font-weight: bold;"><a href="https://tonyyuango.github.io/tonyyuango.github.io/files/cikm2018.zip">Open-Schema Event Profiling for Massive News Corpora.</a></span>
+<br>
+<strong><em>Quan Yuan</em></strong>, Xiang Ren, Wenqi He, Chao Zhang, Xinhe Geng, Lifu Huang, Heng Ji, Chin-Yew Lin, Jiawei Han.
+<br>
+<span style="font-style: italic;"> Proceedings of the 10st ACM International Conference on Web Search and Data Mining(<strong>WSDM '17</strong>), pages 263-272, Cambridge, UK, February 6-10, 2017.<br>
+</span></li>
 
 </ul>
 </div>
