--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@ He received B.E. degree from <a href="http://scs.bupt.edu.cn/cs_web/English/oute
 
 <h3 id="research"> Research Interests </h3>
 <ul>
+<li> Real-Time Bidding.</li>
 <li> Spatiotemporal Mobility Modeling for Individual Users.</li>
 <li> Recommender Systems</li>
 <li> Text Mining</li>
@@ -76,13 +77,27 @@ He received B.E. degree from <a href="http://scs.bupt.edu.cn/cs_web/English/oute
 <h3 id="publications"> Publications </h3>
 <ul>
 
+<li class="b">
+<span style="font-weight: bold;">Open-Schema Event Profiling for Massive News Corpora</span>.
+<br>
+<strong><em>Quan Yuan</em></strong>, Xiang Ren, Wenqi He, Chao Zhang, Xinhe Geng, Lifu Huang, Heng Ji, Chin-Yew Lin, Jiawei Han.
+<br>
+<span style="font-style: italic;"> Proceedings of the 27th ACM International Conference on Information and Knowledge Management(<strong>CIKM '18</strong>), 587-596, Torino, Italy, October 22 - 26, 2018.<br>
+
+<li class="b">
+<span style="font-weight: bold;">GeoBurst+: Effective and Real-Time Local Event Detection in Geo-Tagged Tweet Streams</span>.
+<br>
+Chao Zhang, Dongming Lei, <strong><em>Quan Yuan</em></strong>, Honglei Zhuang, Lance M. Kaplan, Shaowen Wang, and Jiawei Han.
+<br>
+<span style="font-style: italic;"> Proceedings of the ACM Transactions on Intelligent Systems and Technology(<strong>TIST</strong>), Volume 9 Issue 3, February, 2018.<br>
+</span></li>
 
 <li class="b">
 <span style="font-weight: bold;">Detecting Multiple Periods and Periodic Patterns in Event Time Sequences</span>.
 <br>
 <strong><em>Quan Yuan</em></strong>, Jingbo Shang, Xin Cao, Chao Zhang, Xinhe Geng, and Jiawei Han.
 <br>
-<span style="font-style: italic;"> Proceedings of the 26th ACM International Conference on Information and Knowledge Management(<strong>CIKM '17</strong>), to be published, Singapore, November 6-10, 2017.<br>
+<span style="font-style: italic;"> Proceedings of the 26th ACM International Conference on Information and Knowledge Management(<strong>CIKM '17</strong>), 617-626, Singapore, November 6-10, 2017.<br>
 
 
 <li class="b">
@@ -90,7 +105,7 @@ He received B.E. degree from <a href="http://scs.bupt.edu.cn/cs_web/English/oute
 <br>
 Mengxiong Liu, Zhengchao Liu, Chao Zhang,  Keyang Zhang, <strong><em>Quan Yuan</em></strong>, Tim Hanratty, and Jiawei Han.
 <br>
-<span style="font-style: italic;"> Proceedings of the 10st ACM International Conference on Web Search and Data Mining(<strong>CIKM '17</strong>, demo), to be published, Singapore, November 6-10, 2017.<br>
+<span style="font-style: italic;"> Proceedings of the 10st ACM International Conference on Web Search and Data Mining(<strong>CIKM '17</strong>, demo), 2503-2506, Singapore, November 6-10, 2017.<br>
 
 <li class="b">
 <span style="font-weight: bold;">Towards Space and Time Coupled Social Media Analysis</span>.
@@ -135,15 +150,7 @@ Kaiqi Zhao, <strong><em>Quan Yuan</em></strong>, and Gao Cong.
 <br>
 <strong><em>Quan Yuan</em></strong>, Wei Zhang, Chao Zhang, Xinhe Geng, Gao Cong, and Jiawei Han.
 <br>
-<span style="font-style: italic;"> Proceedings of the 10st ACM International Conference on Web Search and Data Mining(<strong>WSDM '17</strong>), to be published, Cambridge, UK, February 6-10, 2017.<br>
-
-<li class="b">
-<span style="font-weight: bold;">GeoBurst+: Effective and Real-Time Local Event Detection in Geo-Tagged Tweet Streams</span>.
-<br>
-Chao Zhang, Dongming Lei, <strong><em>Quan Yuan</em></strong>, Honglei Zhuang, Lance M. Kaplan, Shaowen Wang, and Jiawei Han.
-<br>
-<span style="font-style: italic;"> Proceedings of the ACM Transactions on Intelligent Systems and Technology(<strong>TIST</strong>), to be published, 2017.<br>
-</span></li>
+<span style="font-style: italic;"> Proceedings of the 10st ACM International Conference on Web Search and Data Mining(<strong>WSDM '17</strong>), 263-272, Cambridge, UK, February 6-10, 2017.<br>
 
 <li class="b">
 <span style="font-weight: bold;">An Experimental Evaluation of Pointof-interest Recommendation in Location-based Social Networks</span>.
@@ -176,7 +183,7 @@ Chao Zhang, <strong><em>Quan Yuan</em></strong>, and Jiawei Han.
 <br>
 <strong><em>Quan Yuan</em></strong>, Chao Zhang, and Jiawei Han.
 <br>
-<span style="font-style: italic;"> Trends in Spatial Analysis and Modelling (book chapter), Springer, to be published, 2017.<br>
+<span style="font-style: italic;"> Trends in Spatial Analysis and Modelling (book chapter), Springer, 43-57, 2018.<br>
 </span></li>
 
 <li class="b">
@@ -369,7 +376,7 @@ Reviewer: <span style="font-style: italic;">ICDE '18, CIKM (full paper, demo) '1
 </ul>
 
 <hr>
-Last update on 19 September 2017
+Last update on 03 December 2018
 </p>
 <a href="http://info.flagcounter.com/MUyl"><img src="http://s09.flagcounter.com/count/MUyl/bg_FFFFFF/txt_000000/border_CCCCCC/columns_6/maxflags_6/viewers_3/labels_0/pageviews_0/flags_0/" alt="Flag Counter" border="0"></a><p align="right">
 </div>
