change the conf name of cikm 2018 in data code

--- a/files/datacode.html
+++ b/files/datacode.html
@@ -34,7 +34,7 @@
 <br>
 <strong><em>Quan Yuan</em></strong>, Xiang Ren, Wenqi He, Chao Zhang, Xinhe Geng, Lifu Huang, Heng Ji, Chin-Yew Lin, Jiawei Han.
 <br>
-<span style="font-style: italic;"> Proceedings of the 10st ACM International Conference on Web Search and Data Mining(<strong>WSDM '17</strong>), pages 263-272, Cambridge, UK, February 6-10, 2017.<br>
+nformation and Knowledge Management(<strong>CIKM '18</strong>), 587-596, Torino, Italy, October 22 - 26, 2018.<br>
 </span></li>
 
 </ul>
