add reviewer and session chair

--- a/index.html
+++ b/index.html
@@ -361,7 +361,10 @@ Xin Cao, Gao Cong, Bin Cui, Christian S. Jensen, and <strong><em>Quan Yuan</em><
 <span style="font-style: italic;">Supervisor: <a href="http://net.pku.edu.cn/~cuibin/">Prof. Bin Cui</a></span>
 </li>
 <li>
-Reviewer: <span style="font-style: italic;">ICDE '18, CIKM (full paper, demo) '17, TKDE '16, '15, TOIS '16, ADMA '17, MIS '17, APWeb-WAIM '17, CCL '17, DSAA '16, IJCIS '17, JASIST '17, IPM '15, WWWJ '15, NEUCOM '15, PMC '16, '15, PRL '14, KAIS '17, '16, JISE '16, '15, '14, FCS '16, JCST '16, T-ASE '16, TSC '17, '16</span>
+Reviewer: <span style="font-style: italic;">ICDE '19, '18, CIKM '18, '17, TKDE '16, '15, TOIS '18, '16, ADMA '17, MIS '17, APWeb-WAIM '17, CCL '17, DSAA '16, IJCIS '17, JASIST '17, IPM '15, WWWJ '15, NEUCOM '15, PMC '16, '15, PRL '14, KAIS '17, '16, JISE '16, '15, '14, FCS '16, JCST '16, T-ASE '16, TSC '17, '16</span>
+</li>
+<li>
+Session Chair: <span style="font-style: italic;">CIKM 2018</span>
 </li>
 </ul>
 <hr>
